--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -3,7 +3,7 @@ name: Issues to Github
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '15 4 * * *'    
+    - cron:  '*/5 * * * *'    
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
