--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,6 +22,8 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
     - name: Updating things
+      env:
+        - GH_TOKEN: {{secrets.GH_TOKEN}}
       run: python issues.py
     - name: Commit changes
       uses: EndBug/add-and-commit@v7
