--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,5 +1,8 @@
 name: Issues to Github
 
+concurrency: 
+  group: things
+
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
