--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,10 +18,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.11
+        python-version: 3.*
     - name: Install dependencies
       run: pip install -r requirements.txt
     - name: Updating things
