--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -6,7 +6,7 @@ concurrency:
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/5 * * * *'    
+    # - cron:  '*/5 * * * *'    
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
